k8s/ingress/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: svs-microservices
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: svs-app.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: svs-service-frontend  # Ensure this matches your Service name
            port:
              number: 80         # The port your Service is listening on
